# gamma

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
backend/: config.py  main.py  requirements.txt
backend/db/: client.py
backend/models/: __init__.py  agent.py  projects.py  users.py
backend/routers/: agent.py  artifacts.py  experiments.py  jobs.py  projects.py  webhooks.py
backend/services/: agent_service.py  github_service.py  mlflow_service.py  s3_service.py  sagemaker_service.py
db/: 001_schema.sql
docker/: .dockerignore  Dockerfile  Dockerfile.mlflow
frontend/: .env.local.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/app/: layout-client.tsx  layout.tsx  page.tsx
frontend/src/components/: ArtifactList.tsx  ChatMessage.tsx  DiffViewer.tsx  JobTable.tsx  MetricChart.tsx  artifact-list.tsx  chat-message.tsx  diff-viewer.tsx  job-table.tsx  metric-chart.tsx  providers.tsx
frontend/src/hooks/: useAuth.ts  useJobs.ts  useProjects.ts
gamma/: config.py  main.py
gamma/db/: __init__.py  client.py
gamma/models/: __init__.py  jobs.py  projects.py
gamma/routers/: agent.py  artifacts.py  experiments.py  github.py  jobs.py  projects.py  webhooks.py
gamma/services/: agent_service.py  github_service.py  mlflow_service.py  s3_service.py  sagemaker_service.py
terraform/: main.tf  outputs.tf  variables.tf
terraform/environments/: dev.tfvars  prod.tfvars
tests/: conftest.py  test_config.py  test_github_router.py  test_projects.py  test_supabase_integration.py
(+27 files in other folders)
